--- a/taxonomy_manager/templates/base.html
+++ b/taxonomy_manager/templates/base.html
@@ -1,186 +1,8 @@
-Enhancing OpenShift Pipelines with Software Supply Chain Security Use Cases
-
-
-The PipelineRun Details view in the Developer or Administrator perspective of the web console provides an enhanced visual representation of PipelinesRuns within a project. These enhancements align with Software Supply Chain Security use cases, ensuring the integrity and security of your application throughout their development lifecycle.
-
-The enhanced PipelineRun Details view displays:
-
-Security and provenance badge - A signed badge to help you understand the security posture and origin of your PipelineRun
-Output tab - A tab to view the PipelineRun results
-Project Vulnerabilities -  A visual representation of all the vulnerabilities within a project.
-Software Bill of Materials (SBOMs): Download or view detailed listing of software components used in a PipelineRun.
-
-Security and provenance badge
-A PipelineRun next to its name displays a signed badge. This badge indicates that the PipelineRun has undergone a security review by an operator. This review process involves examining the PipelineRun for potential security vulnerabilities and adding the following annotation in the YAML file. 
-
-annotations:
-   chains.tekton.dev/signed: 'true'
-
-
-
-
-
-View Output
-
-The PipelineRun details page displays an Output tab to view the PipelineRun results.
-
-
-
-
-Viewing Vulnerabilities
-The PipelineRun details page provides a visual representation of identified vulnerabilities  categorized by the severity (critical, high, medium, and low). This streamlined view facilitates prioritization and remediation efforts.
-
-
-
-Additionally, you can review the Vulnerabilities column in the PipelineRuns view.
-
-
-
-.Prerequisites
-You have logged in to the web console.
-
-
-You have the appropriate roles and permissions in a project to create applications and other workloads in OpenShift Container Platform.
-
-
-You are in the Administrator perspective.
-
-
-.Procedure
-In the Administrator perspective, switch to the relevant project, for example, my-petclinic.
-Optional: If you do not have a vulnerability scan task YAML file, create one in the following format.
-Example vulnerability scan task
-
-	apiVersion: tekton.dev/v1
-kind: Task
-metadata:
-  name: vulnerability-scan  # <1>
-  annotations:
-	task.output.location: results  # <2>
-	task.results.format: application/json
-	task.results.key: SCAN_OUTPUT
-spec:
-  results:
-	- description: CVE result format  # <3>
-  	name: SCAN_OUTPUT
-  	type: string
-  steps:
-	- name: scan  # <4>
-  	image: quay.io/your-tool-image  # <5>
-  	env:
-    	- name: TOOL_ENV_VAR1  # <6>
-      	valueFrom:
-        	secretKeyRef:
-          	key: tool_var1
-          	name: tool-secrets
-  	script: |  # <7>
-    	#!/bin/sh
-
-    	# Tool-specific setup commands
-    	# ... (replace with actual setup commands for your tool)
-
-    	# Execute the vulnerability scan and store the results in the .json output format (replace with your tool's command)
-    	your-tool-command --output json > scan_output.json
-    	jq -rce \ <8>
-      	'{vulnerabilities:{
-        	critical: (.result.summary.CRITICAL),
-        	high: (.result.summary.IMPORTANT),
-        	medium: (.result.summary.MODERATE),
-        	low: (.result.summary.LOW)
-      	}}' scan_output.json | tee $(results.SCAN_OUTPUT.path)
-
 <.>  The name of your task.
-<.>  The location for storing the task outputs
+<.>  The location for storing the task outputs.
 <.>  The description of the result.
-<.> The name of the vulnerability scanning tool that you have used. For example, you can use Roxctl. 
+<.> The name of the vulnerability scanning tool that you have used. For example, Roxctl. 
 <.> The location of the actual image containing the scan tool.
-<.> The tool-specific environment variables
-<.>     Set up the shell script to be executed. You must ensure that the scan results are outputted in the json format. For example, scan_output.json.
+<.> The tool-specific environment variables.
+<.>   The shell script to be executed with json output. For example, scan_output.json.
 <.>  Extract vulnerability summary (adjust jq command for different JSON structures).
-Update your existing vulnerability scan task YAML file to ensure that it stores the output in the .json file and extracts the vulnerability summary in the following format:
-	jq -rce \ <.>
-      	'{vulnerabilities:{
-        	critical: (.result.summary.CRITICAL),
-        	high: (.result.summary.IMPORTANT),
-        	medium: (.result.summary.MODERATE),
-        	low: (.result.summary.LOW)
-      	}}' scan_output.json | tee $(results.SCAN_OUTPUT.path)
-
-	<.>  Extract vulnerability summary (adjust jq command for different JSON structures).
-	
-Update an appropriate PipelineRun to add vulnerabilities specifications:
-	…
-spec:
-  results:
-	- description: The common vulnerabilities and exposures (CVE) result
-  	name: SCAN_OUTPUT
-  	value: $(tasks.vulnerability-scan.results.SCAN_OUTPUT)
-
-.Verification
-Navigate to the PipelineRuns list view page, and review Vulnerabilities column.
-Alternatively, you can navigate to the PipelineRun details page and review the Vulnerabilities row.
-
-
-
-
-Viewing and Downloading SBOMs
-The PipelineRun details page provides an option to download or view SBOMs, enhancing transparency and control within your supply chain. It lists all the software libraries that a component uses. Those libraries can enable specific functionality or facilitate development.
-
-You can use an SBOM to better understand the composition of your software, identify vulnerabilities, and assess the potential impact of any security issues that may arise.
-
-
-.Prerequisites
-You have logged in to the web console.
-
-
-You have the appropriate roles and permissions in a project to create applications and other workloads in OpenShift Container Platform.
-
-
-You are in the Administrator perspective.
-
-
-.Procedure
-In the Administrator perspective, switch to the relevant project, for example, my-petclinic.
-Add a task to create the SBOM link. 
-	Example SBOM link task
-apiVersion: tekton.dev/v1
-kind: Task
-metadata:
-  name: sbom-task
-  annotations:
-	task.output.location: results
-	task.results.format: application/text
-	task.results.key: LINK_TO_SBOM
-spec:
-  results:
-  	- name: LINK_TO_SBOM
-    	description: Contains the SBOM link
-  steps:
-	- name: print-sbom-results
-  	image: quay.io/redhat-appstudio/syft:v0.96.0
-  	script: |
-    	#!/bin/sh
-    	syft version
-    	syft quay.io/bsutter/quarkus-demo:v2 --output cyclonedx-json=sbom-image.json
-    	echo 'BEGIN SBOM'
-    	cat sbom-image.json
-    	echo 'END SBOM'
-    	echo 'quay.io/redhat-user-workloads/karthik-jk-tenant/node-express-hello/node-express-hello:build-8e536-1692702836' | tee $(results.LINK_TO_SBOM.path)
-Update the PipelineRun to identify which Task is the SBOM link emitter.
-apiVersion: tekton.dev/v1
-kind: PipelineRun
-metadata:
-  name: pipelinerun-with-sbom-task
-spec:
-  pipelineSpec:
-	tasks:
-  	- name: sbom-task
-    	taskRef:
-      	name: sbom-task
-	results:
-	- name: IMAGE_URL
-  	description:  Contains the SBOM link
-  	value: $(tasks.sbom-task.results.LINK_TO_SBOM)
-
-.Verification
-Navigate to the PipelineRun details page and download or view the SBOMs.
